8_demoapp-app2-winter/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "demoapp-app2-winter"
  namespace: "prod"
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: "demoapp-app2-winter"
    spec:
      containers:
      - image: wiehahne/demoapp-app2
        imagePullPolicy: Always
        name: "demoapp-app2-winter"
        ports:
        - containerPort: 80
