8_demoapp-app2-winter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demoapp-app2-winter"
  namespace: "default"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "demoapp-app2-winter"
