8_demoapp-app2-winter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demoapp-app2-winter"
  namespace: "prod"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demoapp-app2-winter
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demoapp-app2-winter"
              servicePort: 80
